[tool.poetry]
name = "ercx-telegram-bot"
version = "0.1.0"
description = ""
authors = ["asavienko <asavienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
python-telegram-bot = {extras = ["ext"], version = "^20.5"}
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
